image selection styling, bind escape on full-screen overlay, bind cover area on overlays, tableeditbar styling, tinymce fixed height

--- a/core/ressources/css/blocks/form.less
+++ b/core/ressources/css/blocks/form.less
@@ -110,3 +110,10 @@
         font-style: italic;
     }
 }
+.img-select {
+    margin-top: 30px;
+    > .form-group {
+        padding: 0;
+        margin: 0;
+    }
+}
